# multitrait

./: Cargo.toml  README.md
src/: enc_into.rs  error.rs  lib.rs  null.rs  try_decode_from.rs
